# find-crate

./: .deny.toml  .external-types.toml  .git-blame-ignore-revs  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  azure-pipelines.yml  bors.toml  build.rs
.github/.cspell/: project-dictionary.txt  rust-dependencies.txt
.github/workflows/: ci.yml
src/: error.rs  lib.rs
tests/: test.rs
tests/doc/: Cargo.toml
tools/codegen/: Cargo.toml
tools/codegen/src/: main.rs
