[package]
name = "find-crate"
version = "0.6.3"
edition = "2021"
rust-version = "1.64"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/find-crate"
keywords = ["macros", "crate"]
categories = ["development-tools::procedural-macro-helpers"]
exclude = ["/.*", "/tools"]
description = """
Find the crate name from the current Cargo.toml.
"""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
members = ["tools/codegen"]

[lib]
doc-scrape-examples = false

# Note: toml is public dependencies.
[dependencies]
toml = "0.7"

[dev-dependencies]
proc-macro2 = "1"
quote = "1"
semver = "1"
static_assertions = "1"
